--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -76,7 +76,65 @@ a, a:hover{
 .navbar .navbar-brand .icon{
     color: black;
 }
-
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 49px;
+    height: 20px;
+  }
+  
+  .switch input { 
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #f0f0f5;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 20px;
+    width: 20px;
+    background-color: #00d49b;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider {
+    background-color: #2196F3;
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+  
+.slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
+  .direction{
+      right:10px;
+      position: absolute;
+  }
 
 /*
     Dark mode in production!!!
@@ -109,6 +167,9 @@ a, a:hover{
     color: #fff;
 }
 .dark-mode .navbar .navbar-brand .icon{
+    color: #fff;
+}
+.dark-mode .navbar .collapse .navbar-nav .nav-item button{
     color: #fff;
 }
 
